Addressed comments, added datasaving lifecycle method.